Working on blog-loading code.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         </div>
         <div class="body">Articles are loading...</div>
     </article>
+    <script type="module">
+        import loadBlog from "./blog.mjs";
+        loadBlog();
+    </script>
 </body>
 
 </html>
